<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/sunny_background"
    android:layout_height="match_parent"
    tools:context="com.myApplicationWeather.weatherapp.homeActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >



        <SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:hint="Enter Your City"
            android:iconifiedByDefault="false"
            android:searchIcon="@drawable/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:queryHint="Enter Your City"
            android:layout_marginHorizontal="20dp"
           android:layout_marginTop="30dp"
            android:background="@drawable/bg_searchview"
        />


        <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:drawablePadding="15dp"
        android:fontFamily="@font/merriweathersans_medium"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:drawableLeftCompat="@drawable/loctaion" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animation_sun3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="96dp"
        android:fontFamily="@font/merriweathersans_bold"
        android:text="@string/today"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/merriweathersans_semibold"
            android:text="@string/_00_00_c"
            android:textColor="@color/black"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sunny"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView2"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView2"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2" />

        <TextView
            android:id="@+id/maxTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/merriweathersans_regular"
            android:text="@string/max_temp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather" />

    <TextView
        android:id="@+id/minTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweathersans_regular"
        android:text="@string/min_temp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxTemp" />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/merriweathersans_bold"
        android:text="@string/sunday"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minTemp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/merriweathersans_regular"
        android:text="@string/_13_august_2023"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/backgroundshape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:constraint_referenced_ids="linearLayout,linearLayout2,linearLayout3,linearLayout4,linearLayout5,linearLayout6"
                app:flow_maxElementsWrap="3"
                app:flow_wrapMode="chain"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshape"
                android:gravity="center|center_vertical"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <com.airbnb.lottie.LottieAnimationView

                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/animation_humidity2"
                    />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center|center_vertical"
                    android:text="@string/_00_00"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center|center_vertical"
                    android:text="@string/humidity"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshape"
                android:gravity="center|center_vertical"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">
                <com.airbnb.lottie.LottieAnimationView

                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/animation_wind"
                    />

                <TextView
                    android:id="@+id/wind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center|center_vertical"
                    android:text="@string/_00_m_s"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center|center_vertical"
                    android:text="@string/wind_speed"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshape"
                android:gravity="center|center_vertical"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <com.airbnb.lottie.LottieAnimationView

                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/animation_cloud_ondition"
                    />
                <TextView
                    android:id="@+id/condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center|center_vertical"
                    android:text="@string/sunny"
                    android:textAllCaps="true"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center|center_vertical"
                    android:text="@string/condition"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshape"
                android:gravity="center|center_vertical"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <com.airbnb.lottie.LottieAnimationView

                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/animation_sunrise2"
                    />
                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center|center_vertical"
                    android:text="@string/_00_00"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center|center_vertical"
                    android:text="@string/sunrise"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshape"
                android:gravity="center|center_vertical"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <com.airbnb.lottie.LottieAnimationView

                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/animation_sunset2"
                    />
                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center|center_vertical"
                    android:text="@string/_00_000"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center|center_vertical"
                    android:text="@string/sunset"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshape"
                android:gravity="center|center_vertical"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <com.airbnb.lottie.LottieAnimationView

                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/animation_sealevel"
                    />
                <TextView
                    android:id="@+id/sea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center|center_vertical"
                    android:text="@string/_0000_hpa"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center|center_vertical"
                    android:text="@string/sea"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>